--- a/2020/day5.ipynb
+++ b/2020/day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        " 'FBBFBBFLRL']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,15 +77,12 @@
     "    return find_location(seat_code[1:], min_val, max_val)\n",
     "\n",
     "print(find_location(test[:7], min_val=0, max_val=127))\n",
-    "print(find_location(test[7:], min_val=0, max_val=7))\n",
-    "\n",
-    "def get_id(seat_code):\n",
-    "    return 44 * "
+    "print(find_location(test[7:], min_val=0, max_val=7))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +91,7 @@
        "991"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,28 +130,6 @@
     "\n",
     "solve2(raw)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 4\n",
-      "2 3\n",
-      "3 2\n",
-      "4 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [5,4,3,2,1]\n",
-    "for i in range(1, len(a)):\n",
-    "    print(i, a[i])"
    ]
   }
  ],
