--- a/2020/day7.ipynb
+++ b/2020/day7.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- light red bags contain 1 bright white bag, 2 muted yellow bags.\n",
-    "- dark orange bags contain 3 bright white bags, 4 muted yellow bags.\n",
-    "- bright white bags contain 1 shiny gold bag.\n",
-    "- muted yellow bags contain 2 shiny gold bags, 9 faded blue bags.\n",
-    "- shiny gold bags contain 1 dark olive bag, 2 vibrant plum bags.\n",
-    "- dark olive bags contain 3 faded blue bags, 4 dotted black bags.\n",
-    "- vibrant plum bags contain 5 faded blue bags, 6 dotted black bags.\n",
-    "- faded blue bags contain no other bags.\n",
-    "- dotted black bags contain no other bags."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -90,29 +75,19 @@
     "        return self.child_bags\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return self.color + \": \" + str([x for x in self.child_bags.items()])\n",
-    "    \n",
-    "    "
+    "        return self.color + \": \" + str([x for x in self.child_bags.items()])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "594 594 594\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make list of all bags as classes\n",
     "bags = [Bag(bag_description=x)for x in rules]\n",
     "bag_dict = {x.color : x for x in bags}\n",
-    "print(len(rules), len(bags), len(bag_dict))"
+    "# print(len(rules), len(bags), len(bag_dict))"
    ]
   },
   {
@@ -146,7 +121,7 @@
     "    return is_contained\n",
     "\n",
     "\n",
-    "def solve1(bag_dict, target_color='shiny gold', ):\n",
+    "def solve1(bag_dict, target_color='shiny gold'):\n",
     "    # get all possible outerbags for the bag of a given color\n",
     "    return sum([can_contain_child(bag_color, target_color, bag_dict) for bag_color in bag_dict])\n",
     "\n",
@@ -157,18 +132,31 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54803"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_inside(bag_color, bag_dict, current_count):\n",
-    "    if len(bag_dict[bag_color].get_child_bags()) == 0:\n",
-    "        return current_count\n",
-    "    num_children = sum()\n",
+    "def count_children(bag_color, bag_dict):\n",
+    "    children = bag_dict[bag_color].get_child_bags()\n",
+    "    if len(children) == 0:\n",
+    "        # no more children bags\n",
+    "        return 0\n",
+    "    return sum([count + count * count_children(color, bag_dict) for color, count in children.items()])\n",
+    " \n",
     "    \n",
-    "\n",
-    "def solve2():\n",
-    "    # How many individual bags are required inside your single shiny gold bag?\n",
-    "    pass\n",
-    "    "
+    "def solve2(bag_dict, target_color='shiny gold'):\n",
+    "    return count_children(target_color, bag_dict)\n",
+    "    \n",
+    "solve2(bag_dict)"
    ]
   },
   {
@@ -182,10 +170,34 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['shiny gold bags contain 2 dark red bags.',\n",
+       " 'dark red bags contain 2 dark orange bags.',\n",
+       " 'dark orange bags contain 2 dark yellow bags.',\n",
+       " 'dark yellow bags contain 2 dark green bags.',\n",
+       " 'dark green bags contain 2 dark blue bags.',\n",
+       " 'dark blue bags contain 2 dark violet bags.',\n",
+       " 'dark violet bags contain no other bags.']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print(bags[0])\n",
-    "# can_contain_child('muted coral', 'shiny gold', bag_dict=bag_dict)"
+    "# with this example the shiny gold bag contains 126 other bags\n",
+    "test = \"\"\"shiny gold bags contain 2 dark red bags.\n",
+    "dark red bags contain 2 dark orange bags.\n",
+    "dark orange bags contain 2 dark yellow bags.\n",
+    "dark yellow bags contain 2 dark green bags.\n",
+    "dark green bags contain 2 dark blue bags.\n",
+    "dark blue bags contain 2 dark violet bags.\n",
+    "dark violet bags contain no other bags.\"\"\".split(\"\\n\")\n",
+    "test"
    ]
   },
   {
@@ -194,43 +206,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a = {1,2,3,4}\n",
-    "# a.add(5)\n",
-    "# a.add(2)\n",
-    "# a"
+    "# make list of all bags as classes\n",
+    "test_bags = [Bag(bag_description=x)for x in test]\n",
+    "test_bag_dict = {x.color : x for x in test_bags}\n",
+    "# print(len(test), len(test_bags), len(test_bag_dict))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# a = test.split(\" contain \")[1]\n",
-    "# print(a)\n",
-    "\n",
-    "# for bag in a.split(\", \"):\n",
-    "#     print(\"bag:\", bag)\n",
-    "#     bs = bag.strip().split()\n",
-    "#     print(\" \".join(bs[1:3]), int(bs[0]))\n",
-    "    \n",
-    "\n",
-    "\n",
-    "# test = rules[35]\n",
-    "# print(test)\n",
-    "# test.split(\" contain \")[1].split(\", \")\n",
-    "\n",
-    "# a = Bag(rules[0])\n",
-    "# print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sum([True, False, True, True])"
+    "solve2(test_bag_dict, target_color='shiny gold')"
    ]
   }
  ],
