--- a/2020/day8.ipynb
+++ b/2020/day8.ipynb
@@ -110,7 +110,8 @@
     "            temp[i] = \" \".join(['jmp', count])\n",
     "        elif operation == 'jmp':\n",
     "            temp[i] = \" \".join(['nop', count])\n",
-    "            \n",
+    "        else: \n",
+    "            continue\n",
     "        handheld = Console(temp)\n",
     "        handheld.run_code()\n",
     "        if handheld.status == 'terminated':\n",
