--- a/2020/day11.ipynb
+++ b/2020/day11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        " 'LLLLLLLL.LLLL.LLLLLLLLL.LLLLL.LLLLLLLLL.LLLLL.LLLLLLLLLLLL.LLLLLLLL.LLLLLLLLLLLLLLLL.LLLLLLLLLL']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,35 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LLLLLLLL..LLLLLLLLLLLLL.LLLLLLLLL.LLLLL.LLLLL.LLLLLL.LLLLL.LLLLLLLL.LLLLLL.LLLLLLLLLLLLLLLLLLLL',\n",
-       " 'LLLLLLLLL.LLL.LLLLLLLLL.LLLLLLLLL.LLLLL..LLLL.LLLLLLLLLLLL.LLLLLLLL.LLLLLLLL.LLLLLLL.L.LLLLLLLL',\n",
-       " 'LLLLLLLL.LLLLLLLLLLLLLL.LLLLLLLLL.LLLLL.LLLL..LLLLLL.LLLLL.LLLLLLLLLLLLLLLLL.LLLLLLL.LLLLLLLL.L',\n",
-       " 'LLLLLLL.LLLL..LLL.LLLLLLLLLLLLLLLLLLLLL.LLLLL..LLLLL.LL.LL.LLLLLLLL.LLLLLLLLLLLLLLLL.LLLLLLLLLL',\n",
-       " 'LLL.LLLL.LLLLLLLLLLLLLL.LLLLLLLLLLLLLLL.LLLLL.LLLLLLLLLLLLLLLLLLLLLL.LLLLLLL.LLLLLLLLLLLLLLLLLL',\n",
-       " 'L.LL.LLL.LLLL.LLLLLLLLL.LLLLLLLLL.LLLLL.LLL.L.LLLLLLLLLLLLLLLLLLLLLLLLLLL.LL.LLLLLLL.LLLLLL.LLL',\n",
-       " 'LLLLLLLLLL.LL.LLLLLLLLL.LLLLLLLLLLLLLLL.LLLLLLLLLLLLLLLLLLLLLLLLLLL.LLLLLLLLLLLLLLLL.LLLLLLL.LL',\n",
-       " 'LLLLLLLL.LLLL.LLLLLLLLL.LLLLLLLLL.LLLLL.LLLLL.L.LLLL.LLLLL.LLLLLLLLLLLLLLLLL.LLL.LLLLLLLLLLLLLL',\n",
-       " 'LLLLLLLL.LLLL.LLLLLLLLLLLLLL.LLLL.LLLLLLLLLLL.LLLLLLLLLLLL.LLLLLLLL.LLLLLLLL.LLLLLLL.L.LLLLL.LL',\n",
-       " 'LLLLLLLL.LLLL.LLLLLLLLL.LLLLL.LLLLLLLLL.LLLLL.LLLLLLLLLLLL.LLLLLLLL.LLLLLLLLLLLLLLLL.LLLLLLLLLL']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'\\n'.join(raw[-10:]).split(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +101,7 @@
        " '########.####.#########.#####.#########.#####.############.########.################.##########']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,197 +113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = [\"L.LL.LL.LL\",\n",
-    "\"LLLLLLL.LL\",\n",
-    "\"L.L.L..L..\",\n",
-    "\"LLLL.LL.LL\",\n",
-    "\"L.LL.LL.LL\",\n",
-    "\"L.LLLLL.LL\",\n",
-    "\"..L.L.....\",\n",
-    "\"LLLLLLLLLL\",\n",
-    "\"L.LLLLLL.L\",\n",
-    "\"L.LLLLL.LL\",]\n",
-    "\n",
-    "# stable\n",
-    "stable_test = [\n",
-    "\"#.#L.L#.##\",\n",
-    "\"#LLL#LL.L#\",\n",
-    "\"L.#.L..#..\",\n",
-    "\"#L##.##.L#\",\n",
-    "\"#.#L.LL.LL\",\n",
-    "\"#.#L#L#.##\",\n",
-    "\"..L.L.....\",\n",
-    "\"#L#L##L#L#\",\n",
-    "\"#.LLLLLL.L\",\n",
-    "\"#.#L#L#.##\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = update_seating(stable_test)\n",
-    "stable_test == a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#.##.##.##\n",
-    "#######.##\n",
-    "#.#.#..#..\n",
-    "####.##.##\n",
-    "#.##.##.##\n",
-    "#.#####.##\n",
-    "..#.#.....\n",
-    "##########\n",
-    "#.######.#\n",
-    "#.#####.##"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['#.LL.L#.##',\n",
-       " '#LLLLLL.L#',\n",
-       " 'L.L.L..L..',\n",
-       " '#LLL.LL.L#',\n",
-       " '#.LL.LL.LL',\n",
-       " '#.LLLL#.##',\n",
-       " '..L.L.....',\n",
-       " '#LLLLLLLL#',\n",
-       " '#.LLLLLL.L',\n",
-       " '#.#LLLL.##']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "update_seating(update_seating(test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L.LL.LL.LL\n",
-      "LLLLLLL.LL\n",
-      "L.L.L..L..\n",
-      "LLLL.LL.LL\n",
-      "L.LL.LL.LL\n",
-      "L.LLLLL.LL\n",
-      "..L.L.....\n",
-      "LLLLLLLLLL\n",
-      "L.LLLLLL.L\n",
-      "L.LLLLL.LL\n",
-      "\n",
-      "#.##.##.##\n",
-      "#######.##\n",
-      "#.#.#..#..\n",
-      "####.##.##\n",
-      "#.##.##.##\n",
-      "#.#####.##\n",
-      "..#.#.....\n",
-      "##########\n",
-      "#.######.#\n",
-      "#.#####.##\n",
-      "\n",
-      "#.LL.L#.##\n",
-      "#LLLLLL.L#\n",
-      "L.L.L..L..\n",
-      "#LLL.LL.L#\n",
-      "#.LL.LL.LL\n",
-      "#.LLLL#.##\n",
-      "..L.L.....\n",
-      "#LLLLLLLL#\n",
-      "#.LLLLLL.L\n",
-      "#.#LLLL.##\n",
-      "\n",
-      "#.##.L#.##\n",
-      "#L###LL.L#\n",
-      "L.#.#..#..\n",
-      "#L##.##.L#\n",
-      "#.##.LL.LL\n",
-      "#.###L#.##\n",
-      "..#.#.....\n",
-      "#L######L#\n",
-      "#.LL###L.L\n",
-      "#.#L###.##\n",
-      "\n",
-      "#.#L.L#.##\n",
-      "#LLL#LL.L#\n",
-      "L.L.L..#..\n",
-      "#LLL.##.L#\n",
-      "#.LL.LL.LL\n",
-      "#.LL#L#.##\n",
-      "..L.L.....\n",
-      "#L#LLLL#L#\n",
-      "#.LLLLLL.L\n",
-      "#.#L#L#.##\n",
-      "\n",
-      "#.#L.L#.##\n",
-      "#LLL#LL.L#\n",
-      "L.#.L..#..\n",
-      "#L##.##.L#\n",
-      "#.#L.LL.LL\n",
-      "#.#L#L#.##\n",
-      "..L.L.....\n",
-      "#L#L##L#L#\n",
-      "#.LLLLLL.L\n",
-      "#.#L#L#.##\n",
-      "\n"
+      "Iterations until Equilibrium 134\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2211"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "print(\"\\n\".join(test))\n",
-    "print()\n",
-    "a = test\n",
-    "for i in range(5):\n",
-    "    a = update_seating(a)\n",
-    "    print(\"\\n\".join(a))\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def solve1(seats):\n",
     "    curr_arrangemet = seats.copy()\n",
@@ -344,59 +145,207 @@
     "            break\n",
     "        curr_arrangemet = new_arrangement\n",
     "            \n",
-    "    print(counter)\n",
+    "    print(\"Iterations until Equilibrium\", counter)\n",
     "    \n",
     "    return \"\\n\".join(new_arrangement).count('#')\n",
     "\n",
-    "# solve1(raw)\n",
+    "solve1(raw)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_seating2(seats):\n",
+    "    max_width = len(seats[1])\n",
+    "    max_height = len(seats)\n",
+    "    new_arrangement = []\n",
+    "    # loop through input\n",
+    "    for y in range(max_height):\n",
+    "        temp_string = ''\n",
+    "        for x in range(max_width):\n",
+    "            if seats[y][x] == '.':\n",
+    "                temp_string += '.'\n",
+    "                continue\n",
+    "            occ_count = 0\n",
+    "            \n",
+    "            # check left\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x  > 0:\n",
+    "                if seats[temp_y][temp_x - 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y][temp_x - 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x -= 1\n",
+    "            # check right\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x < max_width - 1:\n",
+    "                if seats[temp_y][temp_x + 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y][temp_x + 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x += 1\n",
+    "            # check up\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_y > 0:\n",
+    "                if seats[temp_y - 1][temp_x] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y - 1][temp_x] == 'L':\n",
+    "                    break\n",
+    "                temp_y -= 1\n",
+    "            # check down\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_y < max_height - 1:\n",
+    "                if seats[temp_y + 1][temp_x] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y + 1][temp_x] == 'L':\n",
+    "                    break\n",
+    "                temp_y += 1\n",
+    "            # check upper left\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x > 0 and temp_y > 0:\n",
+    "                if seats[temp_y - 1][temp_x - 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y - 1][temp_x - 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x -= 1\n",
+    "                temp_y -= 1\n",
+    "            # check upper right\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x < max_width - 1 and temp_y > 0:\n",
+    "                if seats[temp_y - 1][temp_x + 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y - 1][temp_x + 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x += 1\n",
+    "                temp_y -= 1\n",
+    "            # check lower right\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x < max_width - 1 and temp_y < max_height - 1:\n",
+    "                if seats[temp_y + 1][temp_x + 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y + 1][temp_x + 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x += 1\n",
+    "                temp_y += 1\n",
+    "            # check lower left\n",
+    "            temp_x, temp_y = x, y\n",
+    "            while temp_x > 0 and temp_y < max_height - 1:\n",
+    "                if seats[temp_y + 1][temp_x - 1] == '#':\n",
+    "                    occ_count += 1\n",
+    "                    break\n",
+    "                elif seats[temp_y + 1][temp_x - 1] == 'L':\n",
+    "                    break\n",
+    "                temp_x -= 1\n",
+    "                temp_y += 1\n",
+    "           \n",
+    "            if seats[y][x] == 'L' and occ_count == 0:\n",
+    "                temp_string += '#'\n",
+    "            elif seats[y][x] == '#' and occ_count >= 5:\n",
+    "                temp_string += 'L'\n",
+    "            else:\n",
+    "                temp_string += seats[y][x]\n",
+    "        new_arrangement.append(temp_string)\n",
+    "    return new_arrangement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "Iterations until Equilibrium 85\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "37"
+       "1995"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solve1(stable_test)"
+    "def solve2(seats):\n",
+    "    curr_arrangemet = seats.copy()\n",
+    "    counter = 0\n",
+    "    while True:\n",
+    "        counter += 1\n",
+    "        new_arrangement = update_seating2(curr_arrangemet)\n",
+    "        if curr_arrangemet == new_arrangement:\n",
+    "            break\n",
+    "        curr_arrangemet = new_arrangement\n",
+    "            \n",
+    "    print(\"Iterations until Equilibrium\", counter)\n",
+    "    \n",
+    "    return \"\\n\".join(new_arrangement).count('#')\n",
+    "\n",
+    "solve2(raw)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iterations until Equilibrium 7\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "7"
+       "26"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"asdfasdfasdfasdfasdfasdfafd\".count('a')"
+    "test = [\n",
+    "\"L.LL.LL.LL\",\n",
+    "\"LLLLLLL.LL\",\n",
+    "\"L.L.L..L..\",\n",
+    "\"LLLL.LL.LL\",\n",
+    "\"L.LL.LL.LL\",\n",
+    "\"L.LLLLL.LL\",\n",
+    "\"..L.L.....\",\n",
+    "\"LLLLLLLLLL\",\n",
+    "\"L.LLLLLL.L\",\n",
+    "\"L.LLLLL.LL\",\n",
+    "]\n",
+    "# solution should be 26\n",
+    "solve2(test)"
    ]
   }
  ],
